--- a/html/home_page.html
+++ b/html/home_page.html
@@ -8,30 +8,84 @@
 </head>
 
 <body>
-    <div class="flex_container">
-        <div class="logo">
-            <img src="../res/images/logo/National_Geographic_Society.png">
-        </div>
-
-        <div class="wrapper">
-            <input placeholder="&#xf002; Search">
-            <span class="fa fa-arrow-circle-o-right"></span>
-        </div>
-        <!--<div>-->
-        <div>
-            <div class="sign_up_wrapper sign_up">
-                <span class="sign_up_span fa fa-user"></span>
-                <p class="sign_up_p">Sign Up</p>
+    <div class="page">
+        <header>
+            <div class="logo">
+                <img src="../res/images/logo/National_Geographic_Society.png">
             </div>
-        </div>
 
-        <div class="dash"></div>
+            <div class="search_wrapper">
+                <input placeholder="&#xf002; Search">
+                <span class="fa fa-arrow-circle-o-right"></span>
+            </div>
 
-        <div class="sign_up_wrapper login">
-            <span class="sign_up_span fa fa-sign-in"></span>
-            <p class="sign_up_p">Login</p>
-        </div>
-        <!--</div>-->
+            <div class="sign_up_wrapper">
+                <div class="sign_up">
+                    <span class="sign_up_span fa fa-user"></span>
+                    <p class="sign_up_p">Sign Up</p>
+                </div>
+                <div class="dash"></div>
+                <div class="login">
+                    <span class="sign_up_span fa fa-sign-in"></span>
+                    <p class="sign_up_p">Login</p>
+                </div>
+            </div>
+        </header>
+
+        <nav>
+
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="yellow fa fa-home fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="fa fa-camera fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="fa fa-video-camera fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="fa fa-recycle fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="fa fa-motorcycle fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="fa fa-user-secret fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="fa fa-tv fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+            <div class="item">
+                <div class="nav_dash"></div>
+                <span class="fa fa-child fa-2x"></span>
+                <div class="nav_dash"></div>
+            </div>
+
+            <!--<div class="home">
+                <div class="nav_dash"></div>
+                <div class="home_column">
+                    <span class="fa fa-home"></span>
+                </div>
+                <div class="nav_dash"></div>
+            </div>-->
+
+        </nav>
+        <div class='main'></div>
+        <footer></footer>
     </div>
 
 </body>
