feat(home page): done responsive nav

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -33,55 +33,77 @@
         </header>
 
         <nav>
-
             <div class="item">
-                <div class="nav_dash"></div>
-                <span class="yellow fa fa-home fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-            <div class="item">
-                <div class="nav_dash"></div>
-                <span class="fa fa-camera fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-            <div class="item">
-                <div class="nav_dash"></div>
-                <span class="fa fa-video-camera fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-            <div class="item">
-                <div class="nav_dash"></div>
-                <span class="fa fa-recycle fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-            <div class="item">
-                <div class="nav_dash"></div>
-                <span class="fa fa-motorcycle fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-            <div class="item">
-                <div class="nav_dash"></div>
-                <span class="fa fa-user-secret fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-            <div class="item">
-                <div class="nav_dash"></div>
-                <span class="fa fa-tv fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-            <div class="item">
-                <div class="nav_dash"></div>
-                <span class="fa fa-child fa-2x"></span>
-                <div class="nav_dash"></div>
-            </div>
-
-            <!--<div class="home">
-                <div class="nav_dash"></div>
-                <div class="home_column">
-                    <span class="fa fa-home"></span>
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-home fa-2x yellow"></span>
+                    <div class="nav_dash"></div>
                 </div>
-                <div class="nav_dash"></div>
-            </div>-->
+                <label class="yellow">HOME</label>
+            </div>
+
+            <div class="item">
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-camera fa-2x"></span>
+                    <div class="nav_dash"></div>
+                </div>
+                <label>Photography</label>
+            </div>
+
+            <div class="item">
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-video-camera fa-2x"></span>
+                    <div class="nav_dash"></div>
+                </div>
+                <label>Video</label>
+            </div>
+
+            <div class="item">
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-recycle fa-2x"></span>
+                    <div class="nav_dash"></div>
+                </div>
+                <label>Enviroment</label>
+            </div>
+
+            <div class="item">
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-motorcycle fa-2x"></span>
+                    <div class="nav_dash"></div>
+                </div>
+                <label>Travel</label>
+            </div>
+
+            <div class="item">
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-user-secret fa-2x"></span>
+                    <div class="nav_dash"></div>
+                </div>
+                <label>Adventure</label>
+            </div>
+
+            <div class="item">
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-tv fa-2x"></span>
+                    <div class="nav_dash"></div>
+                </div>
+                <label>Television</label>
+            </div>
+
+            <div class="item">
+                <div class="item_icon">
+                    <div class="nav_dash"></div>
+                    <span class="fa fa-child fa-2x"></span>
+                    <div class="nav_dash"></div>
+                </div>
+                <label>Kids</label>
+            </div>
 
         </nav>
         <div class='main'></div>
