feat(home page): done not responsive left submenu

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -104,10 +104,68 @@
                 </div>
                 <label>Kids</label>
             </div>
-
         </nav>
-        <div class='main'></div>
-        <footer></footer>
+        <div class="content">
+            <div class="left">
+                <div class="main">
+                    <div class="submenu">
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Daily News</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Magazine</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Maps</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Science</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Education</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Games</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Events</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Blogs</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Explorers</div>
+                        </div>
+                        <div class="submenu_item">
+                            <span class="fa fa-newspaper-o"></span>
+                            <div class="text">Trips</div>
+                        </div>
+                    </div>
+                    <div class="main_slider"></div>
+                </div>
+                <div class="reports"></div>
+
+            </div>
+
+            <div class="right">
+                <div class="popular_news">
+                    <span class="fa fa-star"></span>
+                    <label>Most popular news</label>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <footer></footer>
     </div>
 
 </body>
