--- a/html/home_page.html
+++ b/html/home_page.html
@@ -118,35 +118,35 @@
                             <div class="text">Magazine</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-map"></span>
                             <div class="text">Maps</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-joomla"></span>
                             <div class="text">Science</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-university"></span>
                             <div class="text">Education</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-gamepad"></span>
                             <div class="text">Games</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-calendar"></span>
                             <div class="text">Events</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-commenting-o"></span>
                             <div class="text">Blogs</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-area-chart"></span>
                             <div class="text">Explorers</div>
                         </div>
                         <div class="submenu_item">
-                            <span class="fa fa-newspaper-o"></span>
+                            <span class="fa fa-bus"></span>
                             <div class="text">Trips</div>
                         </div>
                     </div>
