--- a/html/home_page.html
+++ b/html/home_page.html
@@ -150,7 +150,18 @@
                             <div class="text">Trips</div>
                         </div>
                     </div>
-                    <div class="main_slider"></div>
+                    <div class="main_slider">
+                        <div class="filter">
+                            <div>HOME</div>
+                            <div>Animals</div>
+                            <div>Ancient</div>
+                            <div>Energy</div>
+                            <div>Environment</div>
+                            <div>Travel</div>
+                        </div>
+                        <div class="slider">aaaaaaaaaaaaa</div>
+                        <div class="latest_news">rgdfgdgd</div>
+                    </div>
                 </div>
                 <div class="reports"></div>
 
