feat(home page): added main picture

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -159,7 +159,9 @@
                             <div>Environment</div>
                             <div>Travel</div>
                         </div>
-                        <div class="slider">aaaaaaaaaaaaa</div>
+                        <div class="slider">
+                            <img src="../res/images/slider/lions.png">
+                        </div>
                         <div class="latest_news">rgdfgdgd</div>
                     </div>
                 </div>
