feat(home page): added main picture capture by position absolute

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -161,6 +161,19 @@
                         </div>
                         <div class="slider">
                             <img src="../res/images/slider/lions.png">
+                            <div class="slider_caption">
+                                <div class="slider_caption_text">
+                                    <h4>Lion Cubs Playing</h4>
+                                    <p>African lion cubs play in the grass in the Okavango Delta</p>
+                                </div>
+                                <div class="slider_caption_pause">
+                                    <div class="pause">
+                                        <div></div>
+                                        <div class="white"></div>
+                                        <div></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="latest_news">rgdfgdgd</div>
                     </div>
