feat(home page): added responsive last news menu filter

--- a/html/home_page.html
+++ b/html/home_page.html
@@ -160,7 +160,13 @@
                             <div>Travel</div>
                         </div>
                         <div class="slider">
+                            <!--<div class="pagination">
+                                <div>1</div>
+                                <div>2</div>
+                                <div>3</div>
+                            </div>-->
                             <img src="../res/images/slider/slider_pict.png">
+
                             <div class="slider_caption">
                                 <div class="slider_caption_text">
                                     <h4>Lion Cubs Playing</h4>
@@ -175,7 +181,22 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="latest_news">rgdfgdgd</div>
+                        <div class="latest_news">
+                            <div class="icon">
+                                <span class="fa fa-clock-o"></span>
+                            </div>
+                            <div class="text">Latest News</div>
+                            <div class="strip"></div>
+                            <div class="recent">Most Recent</div>
+                            <div class="view_type">
+                                <div class="list_view">
+                                    <span class="fa fa-list"></span>
+                                </div>
+                                <div class="table_view">
+                                    <span class="fa fa-table"></span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="reports"></div>
